# gMod

./: .clang-format  .claudeignore  .editorconfig  .gitattributes  .gitignore  BuildLibZip.ps1  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  README.txt  uMod_ArrayHandler.cpp  uMod_DX9_dll.cpp  uMod_DX9_dll.h  uMod_Defines.h  uMod_IDirect3D9.h  uMod_IDirect3D9Ex.cpp  uMod_IDirect3D9Ex.h  uMod_IDirect3DCubeTexture9.h  uMod_IDirect3DDevice9Ex.h  uMod_IDirect3DVolumeTexture9.cpp  uMod_Main.h  uMod_TextureClient.h  uMod_TextureServer.cpp  vcpkg.json  version.rc.in
.github/workflows/: cd.yaml  ci.yaml  lint.yaml
Dependencies/: CMakeLists.txt  cmake_install.cmake
Dependencies/minhook/: cmake_install.cmake  minhook.vcxproj  minhook.vcxproj.filters
TpfConvert/: CMakeLists.txt
TpfConvert/cmake/: FindDirectX.cmake
TpfConvert/src/: ModfileLoader.ixx  ModfileLoader_TpfReader.ixx  TpfConvert.ixx
cmake/: dxtk.cmake  libzip.cmake  libzippp.cmake  mbedtls.cmake  minhook.cmake  miniz.cmake  msgsl.cmake  zlib.cmake
header/: D3D9Hooks.h  D3D9State.h  Defines.h  Error.h  FileLoader.h  Main.h  Server.h  TextureClient.h  TextureFunction.h  TpfReader.h  Utils.h  XorStreamReader.h  dll_main.h  gMod_FileLoader.h  gMod_XorStream.h  httplib.h  pch.h  uMod_ArrayHandler.h  uMod_DX9_dll.h  uMod_DXMain_dll.h  uMod_Defines.h  uMod_Error.h  uMod_File.h  uMod_GlobalDefines.h  uMod_IDirect3D9.h  uMod_IDirect3D9Ex.h  uMod_IDirect3DCubeTexture9.h  uMod_IDirect3DDevice9.h  uMod_IDirect3DDevice9Ex.h  uMod_IDirect3DTexture9.h  uMod_IDirect3DVolumeTexture9.h  uMod_Main.h  uMod_Texture.h  uMod_TextureClient.h  uMod_TextureFunction.h  uMod_TextureServer.h  unzip.h  utils.h  zip.h
modules/: ModfileLoader.ixx  ModfileLoader_TpfReader.ixx  TextureClient.ixx  TextureFunction.ixx
source/: D3D9Hooks.cpp  Error.cpp  FileLoader.cpp  Server.cpp  TextureClient.cpp  TextureFunction.ixx  dll_main.cpp  gMod_FileLoader.cpp  uMod_ArrayHandler.cpp  uMod_DX9_dll.cpp  uMod_DXMain_dll.cpp  uMod_Error.cpp  uMod_File.cpp  uMod_IDirect3D9.cpp  uMod_IDirect3D9Ex.cpp  uMod_IDirect3DCubeTexture9.cpp  uMod_IDirect3DDevice9.cpp  uMod_IDirect3DDevice9Ex.cpp  uMod_IDirect3DTexture9.cpp  uMod_IDirect3DVolumeTexture9.cpp  uMod_TextureClient.cpp  uMod_TextureFunction.cpp  uMod_TextureServer.cpp  unzip.cpp  zip.cpp
triplets/: x86-windows-mixed.cmake
uMod_DX9/: CMakeLists.txt
